# backend/docs/swagger.yaml
@@ -640,6 +640,12 @@ definitions:
         type: number
       comparisonPeriod:
         type: string
+      driverAccount:
+        type: string
+      driverChange:
+        type: number
+      driverShare:
+        type: number
       gainContribution:
         type: number
       href:
